// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/NavItem As Link 1`] = `
<span
  className="psds-navitem__horz-container"
>
  <div
    data-css-1ij5lym=""
  >
    <a
      className="psds-navitem__button"
      href="https://duckduckgo.com"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__horz-layout"
      >
        <span
          className="psds-navitem__horz-label"
        >
          Item Text
        </span>
      </span>
    </a>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__horz-bar"
  />
</span>
`;

exports[`Storyshots Components/NavItem Basic 1`] = `
<span
  className="psds-navitem__horz-container"
>
  <div
    data-css-1ij5lym=""
  >
    <button
      className="psds-navitem__button"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__horz-layout"
      >
        <span
          className="psds-navitem__horz-label"
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__horz-bar"
  />
</span>
`;

exports[`Storyshots Components/NavItem Horizontal 1`] = `
<span
  className="psds-navitem__horz-container"
>
  <div
    data-css-1ij5lym=""
  >
    <button
      className="psds-navitem__button"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__horz-layout"
      >
        <span
          className="psds-navitem__horz-label"
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__horz-bar"
  />
</span>
`;

exports[`Storyshots Components/NavItem Horizontal As Link 1`] = `
<span
  className="psds-navitem__horz-container"
>
  <div
    data-css-1ij5lym=""
  >
    <a
      className="psds-navitem__button"
      href="https://duckduckgo.com"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__horz-layout"
      >
        <span
          className="psds-navitem__horz-label"
        >
          Item Text
        </span>
      </span>
    </a>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__horz-bar"
  />
</span>
`;

exports[`Storyshots Components/NavItem Horizontal As Link With Icon 1`] = `
<span
  className="psds-navitem__horz-container"
>
  <div
    data-css-1ij5lym=""
  >
    <a
      className="psds-navitem__button"
      href="https://duckduckgo.com"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__horz-layout"
      >
        <span
          className="psds-navitem__horz-icon"
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 0 1 .9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 0 0 .9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 0 0 .9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 0 1 .9.9zM11 8.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V11h2.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H13v2.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V13H8.5a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          className="psds-navitem__horz-label"
        >
          Item Text
        </span>
      </span>
    </a>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__horz-bar"
  />
</span>
`;

exports[`Storyshots Components/NavItem Horizontal Selected 1`] = `
<span
  className="psds-navitem__horz-container"
>
  <div
    data-css-1ij5lym=""
  >
    <button
      className="psds-navitem__button psds-navitem__button--selected"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__horz-layout"
      >
        <span
          className="psds-navitem__horz-icon"
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 0 1 .9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 0 0 .9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 0 0 .9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 0 1 .9.9zM11 8.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V11h2.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H13v2.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V13H8.5a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          className="psds-navitem__horz-label"
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__horz-bar psds-navitem__bar--selected"
  />
</span>
`;

exports[`Storyshots Components/NavItem Horizontal With Icon 1`] = `
<span
  className="psds-navitem__horz-container"
>
  <div
    data-css-1ij5lym=""
  >
    <button
      className="psds-navitem__button"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__horz-layout"
      >
        <span
          className="psds-navitem__horz-icon"
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 0 1 .9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 0 0 .9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 0 0 .9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 0 1 .9.9zM11 8.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V11h2.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H13v2.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V13H8.5a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          className="psds-navitem__horz-label"
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__horz-bar"
  />
</span>
`;

exports[`Storyshots Components/NavItem Horizontal With Menu 1`] = `
<span
  className="psds-navitem__horz-container"
>
  <div
    data-css-1ij5lym=""
  >
    <button
      className="psds-navitem__button"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__horz-layout psds-navitem__horz-layout--menu"
      >
        <span
          className="psds-navitem__horz-icon"
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 0 1 .9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 0 0 .9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 0 0 .9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 0 1 .9.9zM11 8.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V11h2.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H13v2.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V13H8.5a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          className="psds-navitem__horz-label"
        >
          Item Text
        </span>
        <span
          className="psds-navitem__horz-caret"
        >
          <div
            data-css-k31qw2=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </span>
      </span>
    </button>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__horz-bar"
  />
</span>
`;

exports[`Storyshots Components/NavItem Selected Flow Item 1`] = `
<span
  className="psds-navitem__horz-container"
>
  <div
    data-css-1ij5lym=""
  >
    <button
      UNSAFE_stylesFor={
        Object {
          "navitem__bar--selected": Object {
            "background": "linear-gradient(90deg, #2968B2 0%, #27AAE1 100%)",
          },
        }
      }
      className="psds-navitem__button psds-navitem__button--selected"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__horz-layout"
      >
        <span
          className="psds-navitem__horz-icon"
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 0 1 .9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 0 0 .9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 0 0 .9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 0 1 .9.9zM11 8.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V11h2.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H13v2.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V13H8.5a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          className="psds-navitem__horz-label"
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__horz-bar psds-navitem__bar--selected"
  />
</span>
`;

exports[`Storyshots Components/NavItem Selected Skills Item 1`] = `
<span
  className="psds-navitem__horz-container"
>
  <div
    data-css-1ij5lym=""
  >
    <button
      UNSAFE_stylesFor={
        Object {
          "navitem__bar--selected": Object {
            "background": "linear-gradient(90deg, #E80A89 0%, #F15B2A 100%)",
          },
        }
      }
      className="psds-navitem__button psds-navitem__button--selected"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__horz-layout"
      >
        <span
          className="psds-navitem__horz-icon"
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 0 1 .9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 0 0 .9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 0 0 .9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 0 1 .9.9zM11 8.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V11h2.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H13v2.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V13H8.5a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          className="psds-navitem__horz-label"
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__horz-bar psds-navitem__bar--selected"
  />
</span>
`;

exports[`Storyshots Components/NavItem Vertical 1`] = `
<span
  className="psds-navitem__vert-container"
>
  <div
    data-css-1ij5lym=""
  >
    <button
      className="psds-navitem__button"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__vert-layout"
      >
        <span
          className="psds-navitem__vert-label"
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__vert-bar"
  />
</span>
`;

exports[`Storyshots Components/NavItem Vertical As Link 1`] = `
<span
  className="psds-navitem__vert-container"
>
  <div
    data-css-1ij5lym=""
  >
    <a
      className="psds-navitem__button"
      href="https://duckduckgo.com"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__vert-layout"
      >
        <span
          className="psds-navitem__vert-label"
        >
          Item Text
        </span>
      </span>
    </a>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__vert-bar"
  />
</span>
`;

exports[`Storyshots Components/NavItem Vertical As Link With Icon 1`] = `
<span
  className="psds-navitem__vert-container"
>
  <div
    data-css-1ij5lym=""
  >
    <a
      className="psds-navitem__button"
      href="https://duckduckgo.com"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__vert-layout"
      >
        <span
          className="psds-navitem__vert-icon"
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 0 1 .9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 0 0 .9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 0 0 .9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 0 1 .9.9zM11 8.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V11h2.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H13v2.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V13H8.5a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          className="psds-navitem__vert-label"
        >
          Item Text
        </span>
      </span>
    </a>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__vert-bar"
  />
</span>
`;

exports[`Storyshots Components/NavItem Vertical Selected 1`] = `
<span
  className="psds-navitem__vert-container"
>
  <div
    data-css-1ij5lym=""
  >
    <button
      className="psds-navitem__button psds-navitem__button--selected"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__vert-layout"
      >
        <span
          className="psds-navitem__vert-icon"
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 0 1 .9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 0 0 .9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 0 0 .9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 0 1 .9.9zM11 8.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V11h2.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H13v2.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V13H8.5a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          className="psds-navitem__vert-label"
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__vert-bar psds-navitem__bar--selected"
  />
</span>
`;

exports[`Storyshots Components/NavItem Vertical With Icon 1`] = `
<span
  className="psds-navitem__vert-container"
>
  <div
    data-css-1ij5lym=""
  >
    <button
      className="psds-navitem__button"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__vert-layout"
      >
        <span
          className="psds-navitem__vert-icon"
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 0 1 .9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 0 0 .9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 0 0 .9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 0 1 .9.9zM11 8.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V11h2.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H13v2.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V13H8.5a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          className="psds-navitem__vert-label"
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__vert-bar"
  />
</span>
`;

exports[`Storyshots Components/NavItem Vertical With Menu 1`] = `
<span
  className="psds-navitem__vert-container"
>
  <div
    data-css-1ij5lym=""
  >
    <button
      className="psds-navitem__button"
      onClick={[Function]}
    >
      <span
        className="psds-navitem__vert-layout"
      >
        <span
          className="psds-navitem__vert-icon"
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 0 1 .9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 0 0 .9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 0 0 .9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 0 1 .9.9zM11 8.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V11h2.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H13v2.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V13H8.5a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          className="psds-navitem__vert-label"
        >
          Item Text
        </span>
        <span
          className="psds-navitem__vert-caret"
        >
          <div
            data-css-k31qw2=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </span>
      </span>
    </button>
  </div>
  <div
    className="psds-navitem__bar psds-navitem__vert-bar"
  />
</span>
`;

exports[`Storyshots Components/NavItem With Action Menu 1`] = `
<div>
  <span
    className="psds-navitem__horz-container"
  >
    <div
      data-css-1ij5lym=""
    >
      <button
        className="psds-navitem__button"
        onClick={[Function]}
      >
        <span
          className="psds-navitem__horz-layout psds-navitem__horz-layout--menu"
        >
          <span
            className="psds-navitem__horz-icon"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="home icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  clipRule="evenodd"
                  d="m21 13.417.989.988a.5.5 0 0 0 .707 0l.707-.708a.5.5 0 0 0 0-.707L12.353 1.954a.5.5 0 0 0-.707 0L.61 12.99a.5.5 0 0 0 0 .707l.707.707a.5.5 0 0 0 .707 0L3 13.428v7.573a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1v-4a2 2 0 1 1 4 0v4a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1v-7.584zM5 11.428l7-7 7 6.991v8.582h-3v-3a4 4 0 1 0-8 0v3H5v-8.573z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </span>
          <span
            className="psds-navitem__horz-label"
          >
            menu open 
            false
          </span>
          <span
            className="psds-navitem__horz-caret"
          >
            <div
              data-css-k31qw2=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </span>
        </span>
      </button>
    </div>
    <div
      className="psds-navitem__bar psds-navitem__horz-bar"
    />
  </span>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
</div>
`;
